[gd_scene load_steps=20 format=3 uid="uid://dsaaqh6r846s1"]

[ext_resource type="Script" uid="uid://hgdeh6d4tsa2" path="res://Scripts/audio_controller.gd" id="1_t0xn5"]
[ext_resource type="AudioStream" uid="uid://dapvn0ocg8s84" path="res://SFX/test_sfx_pickup.wav" id="2_nqcbu"]
[ext_resource type="AudioStream" uid="uid://byndt5frogv3c" path="res://SFX/hitstop sound test.wav" id="2_ual3u"]
[ext_resource type="AudioStream" uid="uid://cf12dn028v1r5" path="res://SFX/test_reset_sfx.wav" id="3_ual3u"]
[ext_resource type="AudioStream" uid="uid://cy3b0ca40kecf" path="res://SFX/ui slider click sfx.wav" id="5_xxf2r"]
[ext_resource type="AudioStream" uid="uid://b83t7qo8b41fj" path="res://SFX/ui hover sfx dj.wav" id="5_y4nv4"]
[ext_resource type="AudioStream" uid="uid://d2bv7guvcem0a" path="res://SFX/ui click sfx dj.wav" id="6_ncnt2"]
[ext_resource type="AudioStream" uid="uid://dncoj2fk4pjuu" path="res://SFX/ui lookaway sfx test.wav" id="7_7md5g"]
[ext_resource type="AudioStream" uid="uid://dx2j6yxjilemk" path="res://Music/gamejam.mp3" id="7_y4nv4"]
[ext_resource type="AudioStream" uid="uid://c4pt3yjo26faa" path="res://SFX/ui back sfx.wav" id="8_xxf2r"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ncnt2"]
random_pitch = 1.13
streams_count = 1
stream_0/stream = ExtResource("2_ual3u")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yyma2"]
random_pitch = 1.4
random_volume_offset_db = 1.4
streams_count = 1
stream_0/stream = ExtResource("2_nqcbu")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y4nv4"]
random_pitch = 1.2
random_volume_offset_db = 1.4
streams_count = 1
stream_0/stream = ExtResource("3_ual3u")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6o502"]
random_pitch = 1.3
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("5_xxf2r")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uc8ob"]
random_pitch = 1.3
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("5_xxf2r")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7md5g"]
random_pitch = 1.15
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("5_y4nv4")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xxf2r"]
random_pitch = 1.15
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("6_ncnt2")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y5jvc"]
random_pitch = 1.3
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("7_7md5g")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_40amf"]
random_pitch = 1.15
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("8_xxf2r")

[node name="AudioController" type="Node"]
script = ExtResource("1_t0xn5")

[node name="HitSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ncnt2")
bus = &"SFX"

[node name="CircleSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_yyma2")
volume_db = 4.952
bus = &"SFX"

[node name="FailCircleSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_y4nv4")
bus = &"SFX"

[node name="UISliderClickSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_6o502")
bus = &"SFX"

[node name="UISliderClickEndSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_uc8ob")
volume_db = -3.0
pitch_scale = 1.57

[node name="UIHoverSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_7md5g")
volume_db = -8.75
bus = &"SFX"

[node name="UIClickSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_xxf2r")
bus = &"SFX"

[node name="UILookawaySFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_y5jvc")
volume_db = -3.0
bus = &"SFX"

[node name="UIBackSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_40amf")
volume_db = 7.2
bus = &"SFX"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_y4nv4")
bus = &"Music"
playback_type = 1

[node name="TutorialMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_y4nv4")
bus = &"Music"
playback_type = 1
